# mf07-language

./: .gitignore  CHECKPOINT_ORM.md  QUICKSTART.md  README.md  config.yml  corplang.sh  eco.system.json  install.sh  language_config.yaml  main.mp  mf  mf.bat  pyproject.toml  uninstall.sh  verify_all_nodes.py  verify_real_code.py
.github/: ENVIRONMENT_LIFECYCLE_MAP.md  HOISTING_IMPLEMENTATION_SUMMARY.md  HOISTING_QUICK_START.md  HOISTING_USER_GUIDE.md  SCOPE_HOISTING_SOLUTION.md
.github/instructions/: initial.instructions.md
.github/workflows/: build.yml  ci.yml  docs.yml  manual-release.yml  publish.yml  release.yml
docs/: AI_GENERATED_SCHEMAS.md  DATABASE_CONFIGURATION.md  DESIGN_COLLECTIONS_ITERATION.md  DISTRIBUTION_FIXES_SUMMARY.md  DISTRIBUTION_PATH_FIXES.md  INDEX.md  MIGRATION_EXAMPLES.md  MIGRATION_REFACTORING.md  MIGRATION_STRATEGY.md  MIGRATION_TREE_VISUALIZATION.md  MULTI_DRIVER_MIGRATIONS.md  POSTGRESQL_CONFIG.md  PUBLISHING_GUIDE.md  STDLIB_EXAMPLES.md  UNINSTALL_GUIDE.md  VERSION_MANAGEMENT.md  VERSION_SYSTEM_SUMMARY.md  console_loop.md  root_playground_examples.md  runtime_architecture.md
docs/corplang/: INDEX.md  README.md
docs/guides/: intelligence-providers.md
docs/tutorials/: 01-cli-todo.md  01-first-agent.md  02-http-json-api.md  INDEX.md  (+5 more)
migrations/: config.yaml  plan.initial.json  schema.json
scripts/: debug_run_mp.py  run_demo_input.py  run_demo_strict.py  run_mp.py  test_cli.py  test_exception_demos.py  test_stacktrace.py
tests/: conftest.py  test_distribution_fixes.py  test_return_outside_function.py  test_union_types.py
(+484 files in other folders)
